# domains/events/controllers/get/controller.py
@@ -1,6 +1,7 @@
 import connexion
 
 from crosscutting.auth.authentication import initialize_controller
+from crosscutting.exception.hourly_exception import HourlyException
 from crosscutting.response.list_response import ListResponse
 from domains.events.services.event_service import Events
 
@@ -17,3 +18,19 @@ def list_events():
     results, count = Events.find(**search, additional_filters={"company_id": company}, serialize=True)
 
     return ListResponse(records=results, total_count=count).serve()
+
+
+def get_event(id_):
+    """Retrieves an event by ID.
+
+    :param id_:
+    :return: A response containing the event.
+    """
+    employee, company, department, role = initialize_controller(permissions='get:packages')
+
+    result, count = Events.find(additional_filters={"id": id_, "company_id": company}, serialize=True)
+
+    if len(result) == 0:
+        raise HourlyException('err.hourly.EventNotFound')
+    else:
+        return ListResponse(records=result).serve()
